# fashion-mnist

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: config.yaml
data/: .gitignore  FashionMNIST.dvc
fashion_mnist/: data.py  infer.py  model.onnx.dvc  model.py  run_server.py  train.py  weights_FashionCNN.ckpt.dvc
